Add Vuetify over vue-material

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      content="width=device-width,initial-scale=1,minimal-ui"
-      name="viewport"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons"
-    />
+    <meta content="width=device-width,initial-scale=1" name="viewport" />
     <title>slice-vue</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body>
     <noscript>
